updated the basic page template

--- a/light-modules/react-minimal-lm/templates/pages/basic.yaml
+++ b/light-modules/react-minimal-lm/templates/pages/basic.yaml
@@ -32,4 +32,10 @@ areas:
         id: spa-lm:components/paragraph
       List:
         id: spa-lm:components/list
+  
+  bottom:
+    title: bottom bit
+    availableComponents:
+      Paragraph:
+        id: spa-lm:components/paragraph
         
