dynamic env update

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_REST_BASE="/environments/main"
+REACT_APP_REST_BASE="/${REACT_APP_CONFIG_ENV}"
 
 REACT_APP_MGNL_SUB_ID="uma2oae3yyt2eq2c"
 REACT_APP_MGNL_BASE_AUTHOR=""
